fix gap

--- a/src/components/Blocks/TextHubspotForm/index.scss
+++ b/src/components/Blocks/TextHubspotForm/index.scss
@@ -191,7 +191,7 @@
 
     form {
       display: flex;
-      gap: 5px;
+      gap: 20px;
       flex-wrap: wrap;
 
       ul,
